Bugfix in CGenerator.java.
The tests were all passing, but it looked wrong as-is. Maybe the tests
were passing because we were not using the feature that lets the user
use types in a reaction body that relate to contained reactors.